Bug 348378 - Drag and drop to the trash widget does not work.
Summary: Drag and drop to the trash widget does not work.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-28 22:07 UTC by Luis Silva
Modified: 2015-11-14 14:53 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Silva 2015-05-28 22:07:25 UTC
I could not find the kf5 equivalent of this widget to report the bug there.

Dragging a file/folder to the trash plasmoid only acts as if I was dragging to the desktop. This is quite independently from whether I am dragging from a folderview or dolphin.

Reproducible: Always

Steps to Reproduce:
1. Drag a file/folder to the trash plasmoid on the desktop or a panel.
2.
3.

Actual Results:  
File/folder is added to the desktop behind the trash plasmoid or next to it on the panel. 

Expected Results:  
File/folder is moved to trash.

I am using kubuntu backports ppa over a fresh install of vivid (15.04) and kf5 5.3.1 with plasma 15.04.0.
Comment 1 Bhushan Shah 2015-05-29 03:49:25 UTC
Please report plasma 5 bugs to plasmashell. Otherwise it would get lost.
Comment 2 Martin Klapetek 2015-06-03 14:23:46 UTC
I can confirm that dragging anything to trash applet on panel seems to have no effect, with panel widgets locked and unlocked.
Comment 3 Kai Uwe Broulik 2015-06-19 21:34:45 UTC
Git commit dd3a50102e985fe6414953c258ca6e2659ed1de6 by Kai Uwe Broulik.
Committed on 19/06/2015 at 21:33.
Pushed by broulik into branch 'master'.

Implement drag and drop for Trash applet

It accepts drops of local files the user has writing permissions to.
Also, clean up the code a bit and give the applet a sensible minimum size.

REVIEW: 124112
FIXED-IN: 5.4.0

M  +58   -31   applets/trash/package/contents/ui/main.qml
M  +1    -0    applets/trash/plugin/CMakeLists.txt
A  +73   -0    applets/trash/plugin/trash.cpp     [License: LGPL (v2+)]
C  +20   -10   applets/trash/plugin/trash.h [from: applets/trash/plugin/trashplugin.cpp - 061% similarity]
M  +8    -1    applets/trash/plugin/trashplugin.cpp

http://commits.kde.org/plasma-desktop/dd3a50102e985fe6414953c258ca6e2659ed1de6
Comment 4 Gregor Mi 2015-11-08 22:32:58 UTC
Dropping a file to Trash or Home icon results in the following error message:

Access denied to .

I am using Plasma 5.4.2.
Comment 5 Marco Martin 2015-11-10 17:59:00 UTC
It looks like a local problem, can't reproduce here, trash via drag and drop works fine
Comment 6 Kai Uwe Broulik 2015-11-14 11:25:26 UTC
It works fine here too with the trash widget. What does not work is if you have an icon widget that points to trash:/
Comment 7 Gregor Mi 2015-11-14 14:34:25 UTC
I did it with a fresh user profile where by default trash and home files are copied to ~/Desktop/.
Comment 8 Kai Uwe Broulik 2015-11-14 14:48:40 UTC
You mean where you have the folder widget with two icons in it? That is totally unrelated to this bug, also this works here fine, too.
Comment 9 Kai Uwe Broulik 2015-11-14 14:53:20 UTC
Okay, I managed to reproduce this issue. Closing this one, please follow https://bugs.kde.org/show_bug.cgi?id=355337 instead