Implement drag and drop for Trash applet

It accepts drops of local files the user has writing permissions to.
Also, clean up the code a bit and give the applet a sensible minimum size.

REVIEW: 124112
BUG: 348378
FIXED-IN: 5.4.0