applets/trash/package/contents/ui/main.qml
@@ -1,5 +1,6 @@
 /*
  * Copyright 2013  Heena Mahour <heena393@gmail.com>
+ * Copyright 2015  Kai Uwe Broulik <kde@privat.broulik.de>
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -20,20 +21,51 @@ import org.kde.plasma.plasmoid 2.0
 import org.kde.plasma.core 2.0 as PlasmaCore
 import org.kde.plasma.components 2.0 as Components
 import org.kde.kquickcontrolsaddons 2.0
+import org.kde.draganddrop 2.0 as DragDrop
 import org.kde.plasma.private.trash 1.0 as TrashPrivate
 
-MouseArea {
-    id:root
+DragDrop.DropArea {
+    id: root
 
-    Layout.minimumWidth: formFactor == PlasmaCore.Types.Horizontal ? height: 1
-    Layout.minimumHeight: formFactor == PlasmaCore.Types.Vertical ? width : 1
-    property int formFactor: plasmoid.formFactor
-    property bool constrained: formFactor==PlasmaCore.Types.Vertical||formFactor==PlasmaCore.Types.Horizontal
-    hoverEnabled: true
-    onClicked: Qt.openUrlExternally("trash:/");
+    property bool containsAcceptableDrag: false
+
+    Layout.minimumWidth: {
+        if (constrained) {
+            return formFactor === PlasmaCore.Types.Horizontal ? height : 1
+        }
+        return text.width
+    }
+    Layout.minimumHeight: {
+        if (constrained) {
+            formFactor === PlasmaCore.Types.Vertical ? width : 1
+        }
+        return units.iconSizes.small + text.height
+    }
+
+    readonly property int formFactor: plasmoid.formFactor
+    readonly property bool constrained: formFactor === PlasmaCore.Types.Vertical || formFactor === PlasmaCore.Types.Horizontal
+
     Plasmoid.preferredRepresentation: Plasmoid.fullRepresentation
 
     Plasmoid.backgroundHints: PlasmaCore.Types.TranslucentBackground
+
+    preventStealing: true
+
+    onDragEnter: containsAcceptableDrag = TrashPrivate.Trash.trashableUrls(event.mimeData.urls).length > 0
+    onDragLeave: containsAcceptableDrag = false
+
+    onDrop: {
+        containsAcceptableDrag = false
+
+        var trashableUrls = TrashPrivate.Trash.trashableUrls(event.mimeData.urls)
+        if (trashableUrls.length > 0) {
+            TrashPrivate.Trash.trashUrls(trashableUrls)
+            event.accept(Qt.MoveAction)
+        } else {
+            event.accept(Qt.IgnoreAction) // prevent Plasma from spawning an applet
+        }
+    }
+
     TrashPrivate.DirModel {
         id: dirModel
         url: "trash:/"
@@ -47,7 +79,7 @@ MouseArea {
     }
 
     function action_empty() {
-        queryDialog.open();
+        TrashPrivate.Trash.emptyTrash()
     }
 
     Component.onCompleted: {
@@ -57,45 +89,40 @@ MouseArea {
         plasmoid.action("empty").enabled = count > 0;
     }
 
+    MouseArea {
+        id: mouseArea
+        anchors.fill: parent
+        onClicked: Qt.openUrlExternally("trash:/");
+    }
+
     PlasmaCore.IconItem {
-        id:icon
+        id: icon
         source: (dirModel.count > 0) ? "user-trash-full": "user-trash"
-        anchors{
+        anchors {
             left: parent.left
             right: parent.right
             top: parent.top
             bottom: constrained ? parent.bottom: text.top
         }
-        active: root.containsMouse
+        active: toolTip.containsMouse || root.containsAcceptableDrag
     }
+
     Components.Label {
         id: text
-        text: (dirModel.count==0) ? i18n("Trash\nEmpty"): i18np("Trash\nOne item", "Trash\n %1 items", dirModel.count);
         anchors {
-            left: parent.left
+            horizontalCenter: parent.horizontalCenter
             bottom: parent.bottom
-            right: parent.right
         }
+        text: (dirModel.count === 0) ? i18n("Trash\nEmpty") : i18np("Trash\nOne item", "Trash\n %1 items", dirModel.count)
         horizontalAlignment: Text.AlignHCenter
-        opacity: constrained ? 0: 1
+        visible: !constrained
     }
+
     PlasmaCore.ToolTipArea {
+        id: toolTip
         anchors.fill: parent
         mainText: i18n("Trash")
-        subText: (dirModel.count==0) ? i18n("Trash \n Empty"): i18np("Trash\nOne item", "Trash\n %1 items", dirModel.count );
-        icon: (dirModel.count > 0) ? "user-trash-full": "user-trash"
-    }
-
-
-    Components.QueryDialog {
-        id: queryDialog
-        titleIcon: "user-trash"
-        titleText: i18n("Empty Trash")
-        message: i18n("Do you really want to empty the trash ? All the items will be deleted.")
-        acceptButtonText: i18n("Empty Trash")
-        rejectButtonText: i18n("Cancel")
-        onAccepted: dirModel.emptyTrash();
-        onRejected: queryDialog.close();
-        visualParent: root
+        subText: (dirModel.count === 0) ? i18n("Empty") : i18np("One item", "%1 items", dirModel.count)
+        icon: (dirModel.count > 0) ? "user-trash-full" : "user-trash"
     }
 }
